--- a/modelseedpy/community/commscores_template.html
+++ b/modelseedpy/community/commscores_template.html
@@ -50,103 +50,13 @@
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-table" role="tabpanel" aria-labelledby="nav-summary-tab">
                 <p>The biomass yields are expressed in [gm/hr*(gm CDW)]</p>
-                <table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>model1</th>
-      <th>model2</th>
-      <th>media</th>
-      <th>MRO_model1</th>
-      <th>MRO_model2</th>
-      <th>CIP</th>
-      <th>MIP_model1</th>
-      <th>MIP_model2</th>
-      <th>PC</th>
-      <th>BSS_model1</th>
-      <th>BSS_model2</th>
-      <th>BIT</th>
-      <th>GYD</th>
-      <th>RFC</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>Pseudomonas_sp._GM17_2511231006.fna.RAST.fbamodel</td>
-      <td>Sphingobium_sp._AP49_2512564014.fna.RAST.fbamodel</td>
-      <td>R2A_edition_003</td>
-      <td>0.84615 (33/39)</td>
-      <td>0.84615 (33/39)</td>
-      <td>22</td>
-      <td>5 (1)</td>
-      <td>8 (4)</td>
-      <td>0.60797</td>
-      <td>0.641026</td>
-      <td>0.692308</td>
-      <td>mutualism</td>
-      <td>0.16283</td>
-      <td>0.30420</td>
-    </tr>
-  </tbody>
-</table>
+                {{ table|safe }}
             </div>
             <div class="tab-pane fade" id="nav-heatmap" role="tabpanel" aria-labelledby="nav-heatmap-tab">
-                <style type="text/css">
-#T_14c69_row0_col0, #T_14c69_row0_col1, #T_14c69_row0_col2, #T_14c69_row0_col3, #T_14c69_row0_col4, #T_14c69_row0_col5, #T_14c69_row0_col6, #T_14c69_row0_col7, #T_14c69_row0_col8, #T_14c69_row0_col9 {
-  background-color: #fff7fb;
-  color: #000000;
-}
-</style>
-<table id="T_14c69">
-  <thead>
-    <tr>
-      <th class="blank level0" >&nbsp;</th>
-      <th id="T_14c69_level0_col0" class="col_heading level0 col0" >MRO_model1</th>
-      <th id="T_14c69_level0_col1" class="col_heading level0 col1" >MRO_model2</th>
-      <th id="T_14c69_level0_col2" class="col_heading level0 col2" >CIP</th>
-      <th id="T_14c69_level0_col3" class="col_heading level0 col3" >MIP_model1</th>
-      <th id="T_14c69_level0_col4" class="col_heading level0 col4" >MIP_model2</th>
-      <th id="T_14c69_level0_col5" class="col_heading level0 col5" >PC</th>
-      <th id="T_14c69_level0_col6" class="col_heading level0 col6" >BSS_model1</th>
-      <th id="T_14c69_level0_col7" class="col_heading level0 col7" >BSS_model2</th>
-      <th id="T_14c69_level0_col8" class="col_heading level0 col8" >GYD</th>
-      <th id="T_14c69_level0_col9" class="col_heading level0 col9" >RFC</th>
-    </tr>
-    <tr>
-      <th class="index_name level0" >model1 ++ model2 ___ Media</th>
-      <th class="blank col0" >&nbsp;</th>
-      <th class="blank col1" >&nbsp;</th>
-      <th class="blank col2" >&nbsp;</th>
-      <th class="blank col3" >&nbsp;</th>
-      <th class="blank col4" >&nbsp;</th>
-      <th class="blank col5" >&nbsp;</th>
-      <th class="blank col6" >&nbsp;</th>
-      <th class="blank col7" >&nbsp;</th>
-      <th class="blank col8" >&nbsp;</th>
-      <th class="blank col9" >&nbsp;</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th id="T_14c69_level0_row0" class="row_heading level0 row0" >Pseudomonas_sp._GM17_2511231006.fna.RAST.fbamodel ++ Sphingobium_sp._AP49_2512564014.fna.RAST.fbamodel in R2A_edition_003</th>
-      <td id="T_14c69_row0_col0" class="data row0 col0" >0.846150</td>
-      <td id="T_14c69_row0_col1" class="data row0 col1" >0.846150</td>
-      <td id="T_14c69_row0_col2" class="data row0 col2" >22.000000</td>
-      <td id="T_14c69_row0_col3" class="data row0 col3" >5.000000</td>
-      <td id="T_14c69_row0_col4" class="data row0 col4" >8.000000</td>
-      <td id="T_14c69_row0_col5" class="data row0 col5" >0.607970</td>
-      <td id="T_14c69_row0_col6" class="data row0 col6" >0.641026</td>
-      <td id="T_14c69_row0_col7" class="data row0 col7" >0.692308</td>
-      <td id="T_14c69_row0_col8" class="data row0 col8" >0.162830</td>
-      <td id="T_14c69_row0_col9" class="data row0 col9" >0.304200</td>
-    </tr>
-  </tbody>
-</table>
-
+                {{ heatmap|safe }}
             </div>
             <!-- <div class="tab-pane fade" id="nav-mets" role="tabpanel" aria-labelledby="nav-mets-tab">
-                [{'mro_mets': [({'EX_cpd00254_e0', 'EX_cpd00322_e0', 'EX_cpd00149_e0', 'EX_cpd00099_e0', 'EX_cpd00654_e0', 'EX_cpd00136_e0', 'EX_cpd00107_e0', 'EX_cpd00058_e0', 'EX_cpd00119_e0', 'EX_cpd00051_e0', 'EX_cpd03847_e0', 'EX_cpd00017_e0', 'EX_cpd01080_e0', 'EX_cpd00264_e0', 'EX_cpd00393_e0', 'EX_cpd00028_e0', 'EX_cpd00205_e0', 'EX_cpd10515_e0', 'EX_cpd00048_e0', 'EX_cpd00220_e0', 'EX_cpd00030_e0', 'EX_cpd00063_e0', 'EX_cpd00034_e0', 'EX_cpd01017_e0', 'EX_cpd00215_e0', 'EX_cpd00069_e0', 'EX_cpd00793_e0', 'EX_cpd00104_e0', 'EX_cpd00007_e0', 'EX_cpd00065_e0', 'EX_cpd00066_e0', 'EX_cpd00644_e0', 'EX_cpd00156_e0'}, {'EX_cpd00156_e0': 0.035223318909420306, 'EX_cpd00793_e0': 0.000280615915959131, 'EX_cpd00654_e0': 0.005215640721434261, 'EX_cpd00179_e0': 0.06274188137490219, 'EX_cpd10515_e0': 0.0008418477478773932, 'EX_cpd00007_e0': 0.0008418477478773933, 'EX_cpd00311_e0': 0.015193123296078484, 'EX_cpd00058_e0': 0.00028061591595913103, 'EX_cpd00254_e0': 0.00028061591595913103, 'EX_cpd00069_e0': 0.012067660460661201, 'EX_cpd00063_e0': 0.0002806159159591311, 'EX_cpd00034_e0': 0.00028061591595913103, 'EX_cpd00220_e0': 0.0008418477478773932, 'EX_cpd01017_e0': 0.008456496968442235, 'EX_cpd00644_e0': 0.0005612318319182638, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00322_e0': 0.0241798510337235, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00205_e0': 0.00028061591595913103, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd00149_e0': 0.00028061591595913103, 'EX_cpd00065_e0': 0.00472019191450218, 'EX_cpd00048_e0': 0.00028061591595913103, 'EX_cpd00119_e0': 0.007926360007371592, 'EX_cpd00099_e0': 0.00028061591595913103, 'EX_cpd00355_e0': 1.18422356313892, 'EX_cpd01080_e0': 0.024916275954454087, 'EX_cpd00017_e0': 0.013060758175035837, 'EX_cpd00136_e0': 0.00028061591595913103, 'EX_cpd00066_e0': 0.015451949003134503, 'EX_cpd00438_e0': 0.0011917803122624656, 'EX_cpd00209_e0': 0.44760816358423205, 'EX_cpd00028_e0': 0.00028061591595913103, 'EX_cpd00264_e0': 0.00028061591595913103, 'EX_cpd00030_e0': 0.0002806159159591311, 'EX_cpd03847_e0': 0.002501059771089441, 'EX_cpd00307_e0': 0.00841036156544863, 'EX_cpd00393_e0': 0.0008418477478773854, 'EX_cpd00051_e0': 0.0246696822701341}), ({'EX_cpd00254_e0', 'EX_cpd00322_e0', 'EX_cpd00149_e0', 'EX_cpd00099_e0', 'EX_cpd00654_e0', 'EX_cpd00136_e0', 'EX_cpd00107_e0', 'EX_cpd00058_e0', 'EX_cpd00119_e0', 'EX_cpd00051_e0', 'EX_cpd03847_e0', 'EX_cpd00017_e0', 'EX_cpd01080_e0', 'EX_cpd00264_e0', 'EX_cpd00393_e0', 'EX_cpd00028_e0', 'EX_cpd00205_e0', 'EX_cpd10515_e0', 'EX_cpd00048_e0', 'EX_cpd00220_e0', 'EX_cpd00030_e0', 'EX_cpd00063_e0', 'EX_cpd00034_e0', 'EX_cpd01017_e0', 'EX_cpd00215_e0', 'EX_cpd00069_e0', 'EX_cpd00104_e0', 'EX_cpd00793_e0', 'EX_cpd00007_e0', 'EX_cpd00065_e0', 'EX_cpd00066_e0', 'EX_cpd00644_e0', 'EX_cpd00156_e0'}, {'EX_cpd00156_e0': 0.03522331890916251, 'EX_cpd00793_e0': 0.00028061591595913103, 'EX_cpd00654_e0': 0.0011789605965904404, 'EX_cpd10515_e0': 0.0008418477478773931, 'EX_cpd00009_e0': 0.08097478546577376, 'EX_cpd00007_e0': 1.1741528321292758, 'EX_cpd00058_e0': 0.000280615915959131, 'EX_cpd00254_e0': 0.00028061591595913103, 'EX_cpd00069_e0': 0.012067660460661201, 'EX_cpd00063_e0': 0.0002806159159591311, 'EX_cpd00118_e0': 0.0002806159159591311, 'EX_cpd00034_e0': 0.0002806159159591311, 'EX_cpd00220_e0': 0.0008418477478773931, 'EX_cpd01017_e0': 0.008456496968391312, 'EX_cpd00039_e0': 0.028543802049017897, 'EX_cpd00644_e0': 0.0005612318318673393, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00277_e0': 0.0020247366767531506, 'EX_cpd00322_e0': 0.024179851033723502, 'EX_cpd00104_e0': 0.000280615915959131, 'EX_cpd00205_e0': 0.000280615915959131, 'EX_cpd00107_e0': 0.037538884754166196, 'EX_cpd00149_e0': 0.00028061591595913103, 'EX_cpd00065_e0': 0.004720191914502182, 'EX_cpd00048_e0': 0.000280615915959131, 'EX_cpd00119_e0': 0.16897710575026803, 'EX_cpd00099_e0': 0.00028061591595913103, 'EX_cpd01080_e0': 0.024916275954454083, 'EX_cpd00017_e0': 0.0019643114117139167, 'EX_cpd00136_e0': 0.00028061591595913103, 'EX_cpd00066_e0': 0.015451949003134503, 'EX_cpd00794_e0': 0.23177487667053182, 'EX_cpd00060_e0': 0.011096446763321907, 'EX_cpd00028_e0': 0.000280615915959131, 'EX_cpd00264_e0': 0.0002806159159591311, 'EX_cpd00030_e0': 0.0002806159159591311, 'EX_cpd03847_e0': 0.0025010597710894396, 'EX_cpd00393_e0': 0.0008418477478774358, 'EX_cpd00051_e0': 0.0246696822701341})]}, {'mip_mets': {'Pseudomonas_sp._GM17_2511231006.fna.RAST.fbamodel': ['cpd00053', 'cpd00136', 'cpd00067', 'cpd00161', 'cpd00132'], 'Sphingobium_sp._AP49_2512564014.fna.RAST.fbamodel': ['cpd00129', 'cpd00118', 'cpd00067', 'cpd00084', 'cpd00060', 'cpd00033', 'cpd00039', 'cpd00009']}}]
+                {{ mets|safe }}
             </div> -->
         </div>
         <br> <br> <br>
